# pcgrits

./: .gitignore  01_get_MODIS.ipynb  01_get_MODIS_temperature.ipynb  01_get_data-AND_STATS.ipynb  01_get_data-AND_STATS_iacanga.ipynb  02_testing_functions.ipynb  README.md  Untitled-1.ipynb  get_IVs_unify.py  get_IVs_unify_rolo_embrapa.py  get_IVs_yearly.py  get_LST.py  get_LST_89_data.ipynb  get_LST_data.ipynb  get_LST_unify.py  get_LST_yearly.py  get_data.ipynb  get_landsat.py  get_landsat57.py  get_landsat89.py  get_nc_data.py  get_stats_nc.py  grits.py  grits_lst89_p1.py  grits_p1.py  pyproject.toml  x_Landsat_QA.py  x_gemini_landsat.py  zz_teste.ipynb
.github/workflows/: pipeline.yaml
deafrica_tools/: __init__.py  areaofinterest.py  bandindices.py  classification.py  coastal.py  dask.py  datahandling.py  load_era5.py  load_isda.py  load_soil_moisture.py  plotting.py  spatial.py  temporal.py  wetlands.py
deafrica_tools/app/: animations.py  changefilmstrips.py  crophealth.py  deacoastlines.py  forestmonitoring.py  geomedian.py  imageexport.py  wetlandsinsighttool.py  widgetconstructors.py
nbs/: 00_GET_MODIS.ipynb  01_get_MODIS_temperature.ipynb  01_get_data-AND_STATS_iacanga.ipynb  01_get_data.ipynb  02_testing_functions.ipynb  02_testing_functions___.ipynb  0_get_ts_stats_from_farms.ipynb  zz_teste.ipynb
tests/: conftest.py
utils/: get_IVs_unify.py  get_IVs_unify_rolo_embrapa.py  get_IVs_yearly.py  get_LST.py  get_LST_unify.py  get_nc_data.py  get_stats_nc.py  grits.py  grits_lst89_p1.py  grits_vis_p1.py  x_Landsat_QA.py  x_gemini_landsat.py
(+1 files in other folders)
